cluster/terraform/nginx-ingress/2-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: nginx-ingress
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: myapp
